# top-k-compress

./: .gitmodules  CMakeLists.txt  README.md
benchmark/: .gitignore  bench.py  config.py  jobs.py  slurm.py  wrap_compressor.py
cmakemodules/: InitGitSubmodules.cmake
extlib/: CMakeLists.txt
include/: alx_rmq.hpp  ankerl_memory_size.hpp  block_coding.hpp  count_min.hpp  count_min2.hpp  display.hpp  fp_string_view.hpp  idiv_ceil.hpp  k_attractor.hpp  kk_trie.hpp  libsais_wrapper.hpp  linked_list.hpp  lpf_semi_external_factorizer.hpp  lpf_succinct_factorizer.hpp  lzend_kk_parser.hpp  lzend_parsing.hpp  lzend_phrase.hpp  lzend_rev_phrase_trie.hpp  lzend_topk_parser.hpp  lzend_window_index.hpp  mersenne61.hpp  min_pq.hpp  phrase.hpp  phrase_block_reader.hpp  phrase_block_writer.hpp  range.hpp  ranked_linked_list.hpp  rans.hpp  rolling_karp_rabin.hpp  si_iec_literals.hpp  simple_trie.hpp  small_trie.hpp  space_saving.hpp  topk_exhaustive.hpp  topk_header.hpp  topk_lz78.hpp  topk_lzend_trie.hpp  topk_prefixes_count_min.hpp  topk_prefixes_filter_sketch.hpp  topk_prefixes_misra_gries.hpp  (+16 more)
include/archive/: alx_rmq.hpp  count_min2.hpp  fp_string_view.hpp  list_pool.hpp  lzend_parsing.hpp  lzend_rev_phrase_trie.hpp  lzend_window_index.hpp  topk_lzend_trie.hpp  topk_substrings.hpp  topk_trie_node.hpp  vitter87.hpp
include/archive/cm/: topk_prefixes_count_min.hpp  topk_strings_count_min.hpp
include/archive/index/: backward_search.hpp  binary_rank.hpp  binary_search_hybrid.hpp  wavelet_tree.hpp
include/bv/: bit_rank.hpp  elias_fano.hpp  rrr.hpp  rrr_classes.hpp
include/index/: backward_search.hpp  binary_rank.hpp  btree.hpp  btree_node.hpp  dynamic_universe_sampling.hpp  key_result.hpp  result.hpp  wavelet_tree.hpp
include/old/: count_min.hpp  topk_substrings.hpp
results/: comparison.txt  exact.txt  k_impact.txt
src/: CMakeLists.txt  always_inline.hpp  comp.cpp  compressor_base.hpp  count_min.hpp  encode.cpp  firstdiff.cpp  fnv.hpp  gzip_tdc.cpp  hist.cpp  list_pool.hpp  lpf.cpp  lpfs.cpp  lz77_blockwise.cpp  lz77_blockwise_impl.hpp  lz77_compressor.hpp  lz77_lpf.cpp  lz78.cpp  lz78_impl.hpp  lzend.cpp  lzend_blockwise.cpp  lzend_decompress.hpp  lzend_impl.hpp  lzend_kk.cpp  lzend_kk_impl.hpp  lzend_kkl.cpp  lzlike_decompress.hpp  min_pq.hpp  phrase_block_reader.hpp  phrase_block_writer.hpp  rle.cpp  rolling_karp_rabin.hpp  sync.cpp  tdc_compressor.hpp  top_k_compress.hpp  top_k_format.hpp  top_k_substrings.hpp  topk_access.cpp  topk_access.hpp  topk_attract.cpp  (+52 more)
src/archive/: encode.cpp  gzip9.cpp  gzip_tdc.cpp  lzend.cpp  lzend_blockwise.cpp  lzend_decompress.hpp  lzend_impl.hpp  lzend_kk.cpp  lzend_kk_impl.hpp  lzend_kkl.cpp  rle.cpp  topk_compressor_cm.hpp  topk_lz77_cm.cpp  topk_lz78_cm.cpp  topk_lzend.cpp  topk_lzend_impl.hpp  topk_psample_cm.cpp  topk_sample.cpp  topk_sample_cm.cpp  topk_sample_impl.hpp  topk_sel.cpp  topk_sel_impl.hpp  topk_sss.cpp  topk_weiner_lz77.cpp  topk_weiner_lz77_fast.cpp  topk_weiner_lz77_impl.hpp
test/: CMakeLists.txt  test_binary_rank.cpp  test_kk.cpp  test_lzend.cpp  test_pred.cpp  test_wt.cpp
tools/: CMakeLists.txt  firstdiff.cpp  hist.cpp  partbwt.cpp  repl0.cpp  sync.cpp  vitter87.cpp
